# scatseisnet

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  LICENCE  README.md  TESTING.md  TODO.md  lumache.py  pyproject.toml  requirements-test.txt  run_tests.py  setup.cfg  setup.py  test.sh  tox.ini
.github/workflows/: docs.yml  publish.yml  tests.yml
GL_example/: 1_design.ipynb  2_transformation.ipynb  3_reduction.ipynb  4_reconstruction.ipynb  5_clustering.ipynb
docs/: requirements.txt
docs/source/: api.rst  conf.py  dummy  dummy.py  evt.2010.m4.global.csv  guide.rst  index.rst  notebooks.rst  robots.txt  scatseisnet.network.rst  scatseisnet.operation.rst  scatseisnet.wavelet.rst  tutorials.rst  usage.rst
docs/source/_static/: custom.css  pygments.css
docs/source/_templates/: layout.html
docs/source/autoapi/: index.rst
docs/source/autoapi/scatseisnet/: index.rst
docs/source/autoapi/scatseisnet/network/: index.rst
docs/source/autoapi/scatseisnet/operation/: index.rst
docs/source/autoapi/scatseisnet/wavelet/: index.rst
docs/source/logo/: logo.py  logo_anim.py
docs/source/notebooks/: 1_scattering_network_design.ipynb  2_scattering_transform.ipynb  3_dimensionality_reduction.ipynb  4_weights_and_reconstruction.ipynb  5_clustering.ipynb  5_weights_and_reconstruction.ipynb
docs/source/tutorials/: 0_intro.ipynb  0_tim_tests.ipynb  1_design.ipynb  1_intro.ipynb  2_design.ipynb  2_scattering_transform.ipynb  2_transformation.ipynb  3_reduction copy.ipynb  3_reduction.ipynb  3_transformation.ipynb  4_reconstruction.ipynb  4_reduction.ipynb  5_clustering.ipynb  5_reconstruction.ipynb  6_atlas.ipynb  6_clustering.ipynb  6_tremors.ipynb  7_atlas.ipynb  9_compare_clusters.ipynb  9_compare_features.ipynb  9_compare_high_frequency.ipynb
notebooks/: 1_scattering_network_design.ipynb  2_scattering_transform.ipynb  3_dimension_reduction.ipynb  3_dimensionality_reduction copy.ipynb  3_dimensionality_reduction.ipynb  4_clustering.ipynb  4_weights_and_reconstruction.ipynb  ICA.ipynb  scattering_transform.ipynb  weights_and_reconstruction.ipynb
notebooks/.ipynb_checkpoints/: ICA-checkpoint.ipynb  scattering_transform-checkpoint.ipynb
notebooks/example/: features.npy  ica_model.pickle  network.pickle
scatnet/: inventory.py
scatnet/cli/: features.py  inventory.py  transform.py
scatnet/display/: inventory.py  scatterings.py
scatnet/hierarchy/: cluster.py
scatseisnet/: __init__.py  inventory.py  io.py  network.py  operation.py  scatteringnetwork.py  signal.py  wavelet.py
scatseisnet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scatseisnet/.ipynb_checkpoints/: wavelet-checkpoint.py
scatseisnet/cli/: __init__.py  cli.py  common.py  inventory.py  linkage.py  transform.py  waveforms.py
scatseisnet/display/: __init__.py  features.py  inventory.py  linkage.py  waveforms.py
scatseisnet/hierarchy/: __init__.py  cluster.py  display.py
tests/: README.md  __init__.py  test_basic.py  test_compatibility.py  test_errors.py  test_import.py  test_network.py  test_operation.py  test_wavelet.py
tests/data/: YH.DC06..BHE_20120724_20120727.sac  YH.DC06..BHN_20120724_20120727.sac  YH.DC06..BHZ_20120724_20120727.sac
