[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [
  {name = "Léonard Seydoux", email = "seydoux@ipgp.fr"},
  {name = "René Steinmann", email = "rene-steinmann@web.de"},
  {name = "Francis Tong", email = "francistong@gmail.com"},
]
description = "Scattering network for seismology."
name = "scatseisnet"
version = "0.2.0"
