[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [
  {name = "Léonard Seydoux", email = "seydoux@ipgp.fr"},
  {name = "René Steinmann", email = "rene-steinmann@web.de"},
  {name = "Francis Tong", email = "francistong@gmail.com"},
]
description = "Scattering network for seismology."
name = "scatseisnet"
version = "0.2.1"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering",
	"Operating System :: OS Independent",
]
license = {file = "LICENCE"}
requires-python = ">=3.7"
dependencies = [
    "numpy >=1.21.6",
    "scipy >=1.7.3",
]

[project.urls]
Documentation = "https://scatseisnet.readthedocs.io/"
Source = "https://github.com/scatseisnet/scatseisnet"

[tool.flit.sdist]
exclude = ["./docs"]