[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [
  {name = "Léonard Seydoux", email = "seydoux@ipgp.fr"},
  {name = "René Steinmann", email = "rene-steinmann@web.de"},
  {name = "Francis Tong", email = "francistong@gmail.com"},
]
description = "Scattering network for seismology."
name = "scatseisnet"
version = "0.4.0"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering",
	"Operating System :: OS Independent",
]
license = {file = "LICENCE"}
requires-python = ">=3.8"
dependencies = [
    "numpy >=1.21.6",
    "scipy >=1.7.3",
]

[project.optional-dependencies]
gpu = ["cupy >=10.0.0"]
tutorials = [
    "matplotlib >=3.5.0",
    "obspy >=1.3.0",
    "scikit-learn >=1.0.0",
    "umap-learn >=0.5.0",
    "jupyter",
    "ipykernel",
]

[project.urls]
Documentation = "https://scatseisnet.github.io/scatseisnet/"
Source = "https://github.com/scatseisnet/scatseisnet"

[tool.flit.sdist]
exclude = ["./docs"]

[tool.uv.sources]

[tool.uv]
# Specify which extras are included in the default lock
# Empty list means only core dependencies
default-groups = []